--- a/RegisterPage.xaml
+++ b/RegisterPage.xaml
@@ -1,30 +1,30 @@
-﻿<Page x:Class="OnewheroVisitorManagement.RegisterPage"
+﻿<UserControl x:Class="OnewheroVisitorManagement.RegisterPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      Height="600" Width="850"
-      Title="RegisterPage">
+      Height="600" Width="850">
 
-    <Grid Background="#F4F4F4" Margin="20">
-        <Button Style="{StaticResource ExitApp}"/>
-        <Button Style="{StaticResource BackBtn_Style}"/>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+    <ContentControl x:Name="RegisterContent">
+        <Grid Background="#F4F4F4" Margin="20">
+            <Button Style="{StaticResource ExitApp}"/>
+            <Button Style="{StaticResource BackBtn_Style}"/>
+            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
-            <TextBlock Text="Register"
+                <TextBlock Text="Register"
                        Style="{StaticResource Header1_Style}"
                        Foreground="DarkSlateBlue"
                        TextAlignment="Center"/>
 
-            <TextBlock Text="Full Name" Style="{StaticResource Text_Style}"/>
-            <TextBox x:Name="txtFullName"
+                <TextBlock Text="Full Name" Style="{StaticResource Text_Style}"/>
+                <TextBox x:Name="txtFullName"
                      Margin="0,10"/>
 
-            <TextBlock Text="Contact Email" Style="{StaticResource Text_Style}"/>
-            <TextBox x:Name="txtEmail"
+                <TextBlock Text="Contact Email" Style="{StaticResource Text_Style}"/>
+                <TextBox x:Name="txtEmail"
                      Margin="0,10"/>
 
-            <Button Content="Register"
+                <Button Content="Register"
                     Width="100"
                     Height="35"
                     Margin="0,15,0,0"
@@ -32,6 +32,7 @@
                     Foreground="White"
                     FontWeight="Bold"
                     Click="Register_Click"/>
-        </StackPanel>
-    </Grid>
-</Page>
+            </StackPanel>
+        </Grid>
+    </ContentControl>
+</UserControl>
